test/conformance/chainsaw/exceptions/psa-run-as-non-root/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: psp-restricted-limited
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
